Extend standalone runner RESTful API for basic message listing (fixes #673)
